new command for deploy: host hardware info collecting
Signed-off-by: Liu Cong <innerr@gmail.com>

--- a/helper/authorize.template
+++ b/helper/authorize.template
@@ -1,4 +1,7 @@
+
+mkdir -p "${HOME}/.ssh"
 target="$HOME/.ssh/authorized_keys"
+
 if [ ! -f "${target}" ]; then
 	echo "$key" > "${target}"
 	chmod 600 "${target}"
